# simple-chatbot-lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
chatbots/: models.py
services/: models.py
src/chatbot_lib/chatbots/: models.py
src/chatbot_lib/mappers/: messages.py
src/chatbot_lib/services/: models.py
src/chatbot_lib/third_parties/services/: rag.py
src/simple_chatbot_lib/chatbots/: models.py
src/simple_chatbot_lib/mappers/: messages.py
src/simple_chatbot_lib/third_parties/services/: rag.py
third_parties/services/: rag.py
